Bug 1657028 - Mark as dead earlier during shutdown, r=kmag

Previously we would call RemoveFromList, without calling MarkAsDead, when
ShutDownProcess was called called from ContentParent::LaunchSubprocessResolve.
This tripped some assertions in BrowsingContextGroup's host code.

Differential Revision: https://phabricator.services.mozilla.com/D95888